--- a/index.html
+++ b/index.html
@@ -8,15 +8,51 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div class="color-code"></div>
-  <div class="score"></div>
-  <div class="box"></div>
-  <div class="box"></div>
-  <div class="box"></div>
+
+ <div class="top">
+  
+  <div class="addsomething">THE GREAT</div>
+  <div class="addsomething1">RGB</div>
+<div class="addsomething2">GUESSING CHALLENGE</div>
+
+</div>
+  
+
+
+
+<div class="the-things">
+
+  <div class="box-score">
+    SCORE
+    : 
+    <span class="score"></span>
+  </div>
+
+
+
+
+<div class="the-color">
+
+
+<div class="color-code"></div>
+
+ 
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+
+
   <div class="modal right">
     THAT'S RIGHT!
     <button class="close">NEXT</button>
   </div>
+
+  <div class="anther wrong">
+      TOO BAD :(
+    <button class="close">NEXT</button>
+  </div>
+
   <script src="./index.js"></script>
 </body>
 </html>
